--- a/Blazor/Shared/NavMenu.razor
+++ b/Blazor/Shared/NavMenu.razor
@@ -4,17 +4,17 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="form">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Form
+                <span class="oi oi-task" aria-hidden="true"></span> Form
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="batch">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Batch Prediction
+                <span class="oi oi-file" aria-hidden="true"></span> Batch Prediction
             </NavLink>
         </div>
     </nav>
