--- a/Blazor/Shared/NavMenu.razor
+++ b/Blazor/Shared/NavMenu.razor
@@ -8,8 +8,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="form">
-                <span class="oi oi-task" aria-hidden="true"></span> Form
+            <NavLink class="nav-link" href="enumform">
+                <span class="oi oi-task" aria-hidden="true"></span> Batch Prediction
             </NavLink>
         </div>
         <div class="nav-item px-3">
