--- a/Blazor/Shared/NavMenu.razor
+++ b/Blazor/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿@inject ILogger<NavMenu> Logger
 
-<div>
+@* <div>
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/">
@@ -18,5 +18,22 @@
             </NavLink>
         </div>
     </nav>
+</div> *@
+
+
+<div class="navmenu">
+    <input type="checkbox" title="Menu expand/collapse toggle" id="navmenu-toggle" class="navmenu-icon" />
+    <label for="navmenu-toggle" class="navmenu-icon"><FluentIcon Value="@(new Icons.Regular.Size20.Navigation())" Color="Color.Fill" /></label>
+    <nav class="sitenav" aria-labelledby="main-menu">
+        <FluentNavMenu Id="main-menu" Width="250" Collapsible="true" Title="Navigation menu" @bind-Expanded="expanded" CustomToggle="true">
+             <FluentNavLink Href="/" Match="NavLinkMatch.All" Icon="@(new Icons.Regular.Size20.Home())" IconColor="Color.Accent">Home</FluentNavLink>
+             <FluentNavLink Href="enumform" Icon="@(new Icons.Regular.Size20.TextBulletListCheckmark())" IconColor="Color.Accent">Single Prediction</FluentNavLink>
+             <FluentNavLink Href="batch" Icon="@(new Icons.Regular.Size20.ArrowUpload())" IconColor="Color.Accent">Batch Prediction</FluentNavLink>
+        </FluentNavMenu>
+    </nav>
 </div>
+
+@code {
+    private bool expanded = true;
+}
 
