--- a/Blazor/Shared/MainLayout.razor
+++ b/Blazor/Shared/MainLayout.razor
@@ -1,30 +1,22 @@
 ﻿@inherits LayoutComponentBase
-@inject ILogger<MainLayout> Logger
-<div class="page" id="wholepage">
-    @if(@collapseNavMenu){
-    <div class="sidebar">
+
+<FluentLayout>
+    <FluentHeader>
+        Machine Learning Application
+    </FluentHeader>
+    <FluentStack Class="main" Orientation="Orientation.Horizontal" Width="100%">
         <NavMenu />
-    </div>
-    }
-    <div class="top-row ps-3 navbar navbar-dark" id="topbar">
-        <button type="button" title="Navigation menu" class="navbar-toggler btn btn-info btn-outline-info" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-
-    <main>
-        <article>
-            @Body
-        </article>
-    </main>
-</div>
-
-@code {
-    private bool collapseNavMenu = false;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-
-    }
-}
+        <FluentBodyContent Class="body-content">
+            <ErrorBoundary>
+                <ChildContent>
+                    <div class="content">
+                        @Body
+                    </div>
+                </ChildContent>
+                <ErrorContent Context="ex">
+                    <div class="blazor-error-boundary">@ex.Message</div>
+                </ErrorContent>
+            </ErrorBoundary>
+        </FluentBodyContent>
+    </FluentStack>
+</FluentLayout>
